# StreamingTeamsAgent

./: .env.sample  .gitignore  LICENSE  README.md  azure.yaml  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  pyproject.toml
.github/: copilot-instructions.md
appPackage/: manifest.json
env/: .env.dev  .env.local  .env.local.sample  .env.playground
infra/: main.bicep  main.parameters.json
infra/modules/: foundry-rbac.bicep
scripts/: build_teams_package.py
src/streaming_teams_agent/: __init__.py  __main__.py  agent.py  foundry_client.py  server.py
